--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gxw-ui",
   "version": "0.1.0",
-  "description": "",
+  "description": "高新网前端组件库",
   "main": "dist/index.umd.js",
   "keywords": [
     "vue",
@@ -15,13 +15,13 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "npm run build:css && npm run build:js",
+    "build": "npm run build:css && npm run build:js && npm run deploy",
     "lint": "vue-cli-service lint",
     "build:js": "webpack --config ./webpack.component.js",
     "build:css": "npx gulp sass",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh"
+    "deploy": "bash deploy.sh",
   },
   "dependencies": {
     "core-js": "^3.8.3",
