--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:css": "npx gulp sass",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "bash deploy.sh",
+    "deploy": "bash deploy.sh"
   },
   "dependencies": {
     "core-js": "^3.8.3",
