--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "npm run build:css && npm run build:js && npm run deploy",
+    "build": "npm run build:css && npm run build:js",
     "lint": "vue-cli-service lint",
     "build:js": "webpack --config ./webpack.component.js",
     "build:css": "npx gulp sass",
