--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "core-js": "^3.8.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "gulp": "^4.0.2",
@@ -42,9 +43,12 @@
     "gulp-sass": "^4.1.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "vue": "2.6.14",
     "vue-loader": "^15.9.6",
+    "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "2.6.14",
     "vuepress": "^1.9.7",
+    "webpack": "^4.0.0",
     "webpack-cli": "^4.10.0"
   },
   "eslintConfig": {
